# fuzzy-timings

./: LICENSE  README.md  fuzzy-timings-scheduler.cabal  fuzzy-timings.cabal
FuzzyTimings/: AccTiming.hs  FuzzyTiming.hs  Schedule.hs  SlicedTime.hs  Solve.hs  TimeOfDaySlice.hs  TimeSlice.hs  TimingBuckets.hs  WeeklySlicedTime.hs
src/: AccTiming.hs  FuzzyTiming.hs  Schedule.hs  SlicedTime.hs  Solve.hs  TimeSlice.hs  TimingBuckets.hs  WeeklySlicedTime.hs
tests/: main.hs
