name:   fuzzy-timings-scheduler
version: 0.0.1
license:    MIT
license-file: LICENSE
author:  Tero Laitinen
synopsis: Translates high-level definitions of "fuzzily" scheduled objects (e.g. play this commercial 10 times per hour between 9:00-13:00) to a list of accurately scheduled objects using glpk-hs.
description:
The original use case of this package is to implement "media planning" in
retail stores, that is, what should be played and when.  Accurately scheduled
announcements, fuzzily scheduled commercials and store opening hours are taken
into account.
category:    Scheduling
stability:   Experimental
cabal-version: >= 1.6
build-type:  Simple
homepage:    https://github.com/tlaitinen/fuzzy-timings-scheduler

library
    build-depends:  base >= 4.3     && < 5
                    
    exposed-modules: 
        FuzzyTimings.AccTiming
        FuzzyTimings.FuzzyTiming
        FuzzyTimings.Schedule
        FuzzyTimings.SlicedTime
        FuzzyTimings.Solve
        FuzzyTimings.TimeOfDaySlice
        FuzzyTimings.TimeSlice
        FuzzyTimings.TimingBuckets
        FuzzyTimings.WeeklySlicedTime
    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/tlaitinen/fuzzy-timings-scheduler
